# piper

./: .coverage  .coveragerc  .dockerignore  .gitattributes  .gitignore  .projectile  CMakeLists.txt  Dockerfile  Dockerfile.dockerignore  Dockerfile.test  Dockerfile.test.dockerignore  JAPANESE_USAGE.md  LICENSE.md  Makefile  PHONEME_MAPPING.md  README.md  TRAINING.md  VOICES.md  coverage.xml  ipa.data  jawris_calm.wav.gpk  jawris_speak.py  jawris_talk.bat  main.cpp  old_ipa.data  piper.cpp  piper.hpp  piper_inferencia_español(ckpt).ipynb  piper_multilenguaje_cuaderno_de_entrenamiento.ipynb  pr_body.md  pytest.ini  quick_start_japanese.md  requirements.txt  run_tests.py  test.txt  test_dictionary_download_comprehensive.sh  test_espeak_path.cpp  test_final_comparison.py  test_final_fixed.py  test_japanese_phonemize.cpp  (+10 more)
.github/benchmark/: benchmark.py
.github/workflows/: benchmark.yml  build-windows.yml  cleanup-draft-releases.yml  dev-daily-release.yml  main.yml  test-binaries.yml  test-multilingual-tts.yml  test-openjtalk-dictionary.yml  test.yml
PiperSharp.Infer/: Class1.cs  ESpeakNgNative.cs  PiperInfer.cs  PiperPhonemizeNative.cs  PiperSharp.Infer.csproj
PiperSharp.Infer.Tests/: ConfigParsingTests.cs  PiperRunnerTests.cs  PiperSharp.Infer.Tests.csproj  WavFileTests.cs
cmake/: HTSEngine.cmake  HTSEngine_CMakeLists.txt  OpenJTalk.cmake  OpenJTalk_CMakeLists.txt  apply_openjtalk_patch.ps1  copy_dlls.cmake  copy_dlls_test.cmake  find_onnxruntime_windows.cmake  linux-armv7.cmake  openjtalk_binary_function.patch  openjtalk_dictionary_patch.txt
docs/: MULTILINGUAL_TESTING.md  MULTILINGUAL_TEST_RESULTS.md  PUA_PHONEME_MAPPING.md  quick_start_japanese.md  test-coverage-status.md  test-plan-tdd.md  test-simplification-plan.md  test-structure-final.md
etc/: test_voice.onnx.json
etc/test_sentences/: ar.txt  ca.txt  cs.txt  cy.txt  da.txt  de.txt  el.txt  en.txt  es.txt  eu.txt  fa.txt  fi.txt  fr.txt  hi.txt  hu.txt  id.txt  is.txt  it.txt  ka.txt  kk.txt  lb.txt  lv.txt  ml.txt  ne.txt  nl.txt  no.txt  pl.txt  pt.txt  ro.txt  ru.txt  sk.txt  sl.txt  sr.txt  sv.txt  sw.txt  te.txt  test_ar.jsonl  test_ca.jsonl  test_cs.jsonl  test_da.jsonl  (+30 more)
examples/: japanese_tts.sh  test_japanese_tts.sh
lib/: .gitignore  onnxruntime-amd64.tgz  onnxruntime-arm64.tgz  onnxruntime-armv7.tgz  onnxruntime-linux-amd64.tgz  onnxruntime-linux-arm64.tgz  onnxruntime-linux-armhf-1.12.0.tgz
notebboks/: piper_inference_(ONNX).ipynb
notebook/: piper_exportador_modelo_español.ipynb
notebooks/: piper_exportador_modelo_español.ipynb  piper_exportador_modelos_español.ipynb  piper_inference_(ONNX).ipynb  piper_inference_(ckpt).ipynb  piper_inferencencia_español_(ONNX).ipynb  piper_inferencia_español(ckpt).ipynb  piper_inferencia_español_(ONNX).ipynb  piper_model_exporter.ipynb  piper_multilenguaje_cuaderno_de_entrenamiento.ipynb  piper_multilingual_training_notebook.ipynb  pretrained_models.json  translator.py
notebooks/lng/: 0.txt  es.lang  guía de traducción.txt  translation guide.txt
script/: generate_voices_md.py
scripts/: check_models.py  download_naist_jdic.sh  generate_supported_languages.py  piper_japanese.sh
src/benchmark/: benchmark_generator.py  benchmark_onnx.py  benchmark_torchscript.py  requirements.txt
src/cpp/: CMakeLists.txt  api.hpp  base64.hpp  compat.cpp  compat.hpp  config.hpp  larynx.hpp  lib.cpp  lib.hpp  libpiper.cpp  libpiper.hpp  main.cpp  model.hpp  openjtalk_api.c  openjtalk_api.h  openjtalk_dictionary_manager.c  openjtalk_dictionary_manager.h  openjtalk_phonemize.cpp  openjtalk_phonemize.hpp  openjtalk_wrapper.c  openjtalk_wrapper.h  phonemes.hpp  phonemize.hpp  piper.cpp  piper.hpp  piperlib.cpp  piperlib.h  piperlib.hpp  synthesize.hpp  test.cpp  testlib.cpp  wavfile.hpp
src/cpp/tests/: CMakeLists.txt  test_dictionary_manager.cpp  test_phonemize.cpp  test_piper_core.cpp
src/cpp/utf8/: cpp17.h
src/python/: Dockerfile  build_monotonic_align.sh  mypy.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  run-docker  setup.py
src/python/larynx_train/: __main__.py  _resources.py  export_generator.py  export_onnx.py  export_torchscript.py  infer.py  infer_generator.py  infer_onnx.py  infer_torchscript.py  phonemize.py  preprocess.py  pylintrc  voice_conversion.py
src/python/piper_train/: .gitignore  __main__.py  _resources.py  check_phonemes.py  clean_cached_audio.py  export_generator.py  export_onnx.py  export_onnx_streaming.py  export_torchscript.py  filter_utterances.py  get_speaking_rate.py  infer.py  infer_generator.py  infer_onnx.py  infer_onnx_streaming.py  infer_torchscript.py  phonemize.py  preprocess.py  select_speaker.py  setup.cfg  update_model_config.py  voice_conversion.py
src/python/scripts/: check.sh  setup.sh
src/python/tests/: conftest.py  test_integration.py  test_phonemize.py  test_phonemize_japanese.py  test_token_mapper_impl.py  test_vits.py
src/python_run/: .gitignore  Dockerfile_http  MANIFEST.in  README_http.md  mypy.ini  pylintrc  requirements.txt  requirements_dev.txt  requirements_gpu.txt  requirements_http.txt  setup.py
src/python_run/larynx/: __init__.py  __main__.py
src/python_run/piper/: __init__.py  __main__.py  config.py  const.py  download.py  file_hash.py  http_server.py  util.py  (+2 more)
test/: README.md  test_dictionary_download.sh  test_dictionary_download_comprehensive.sh
test/configs/: multilingual_test_config.json
test/fixtures/: test_english.txt  test_japanese.txt
test/models/: ja_JP-test-medium.onnx.json
testing/: en_US-lessac-medium.onnx.json  input.txt  libespeak-ng.so.1.1.51  libpiper_phonemize.so.1.1.0  log.txt  playnew.sh  toggle_piper.sh
testing/espeak-ng-data/: bpy_dict  ca_dict  cmn_dict  cs_dict  da_dict  de_dict  en_dict  es_dict  fa_dict  he_dict  hu_dict  intonations  it_dict  ja_dict  ko_dict  kok_dict  my_dict  nl_dict  phondata  phondata-manifest  phonindex  phontab  pl_dict  pt_dict  qu_dict  sd_dict  shn_dict  th_dict  ur_dict  vi_dict
voices/voice-es-mari-medium/: es-mari-medium.onnx.json
voices/voice-es-sharvard-medium/: MODEL_CARD  es-sharvard-medium.onnx.json
(+128 files in other folders)
